[package]
name = "kunaltelangi-version-control"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kvcs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"